More header dark mode fix

--- a/src/components/PageHead/component.scss
+++ b/src/components/PageHead/component.scss
@@ -21,7 +21,7 @@
       display: none;
     }
     .page-head__logo-title-dark {
-      display: auto;
+      display: block;
     } 
   }
 }
